--- a/template/package.json
+++ b/template/package.json
@@ -32,9 +32,9 @@
     "appcenter": "^4.4.5",
     "appcenter-analytics": "^4.4.5",
     "appcenter-crashes": "^4.4.5",
-    "axios": "^0.27.2",
+    "axios": "^1.3.5",
     "i18next": "^21.10.0",
-    "lottie-react-native": "^5.1.4",
+    "lottie-react-native": "^6.0.0-rc.3",
     "promise.allsettled": "^1.0.5",
     "react": "18.2.0",
     "react-error-boundary": "^3.1.4",
